<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bucket"
            type="com.alexkn.syntact.data.model.views.BucketDetail" />

        <variable
            name="progress"
            type="Integer" />

        <variable
            name="flag"
            type="android.graphics.drawable.Drawable" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        app:cardElevation="4dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:adjustViewBounds="true"
                android:background="@drawable/frame"
                android:src="@{flag}"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bucketNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{bucket.name}"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Basic Bucket" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Due"
                android:textAppearance="@style/TextAppearance.MyTheme.Overline"
                app:layout_constraintBaseline_toBaselineOf="@+id/dueLabel"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/dueLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(bucket.dueCount)}"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dueProgressBar"
                tools:text="348" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/optionsButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="Options"
                app:layout_constraintEnd_toStartOf="@id/startButton"
                app:layout_constraintTop_toBottomOf="@+id/dueLabel"
                tools:text="Options" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dueLabel"
                tools:text="Start" />

            <ProgressBar
                android:id="@+id/dueProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:progress="@{progress}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{bucket.language.displayLanguage}"
                android:textAppearance="@style/TextAppearance.MyTheme.Caption"
                app:layout_constraintStart_toStartOf="@+id/bucketNameLabel"
                app:layout_constraintTop_toBottomOf="@+id/bucketNameLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>
