<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deckCreationRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_backdrop"
    tools:context=".presentation.deckcreation.DeckCreationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_backdrop"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/back_content_desc"
            android:padding="12dp"
            android:scaleType="centerCrop"
            android:tint="@color/color_on_backdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deckCreationHeaderExpanded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="@color/color_on_backdrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deckCreationBackdropButton"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Deck Name">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deckCreationHeaderCollapsed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            android:alpha="0"
            android:paddingHorizontal="16dp"
            android:text="@string/deck_creation_new_deck_label"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="@color/color_on_backdrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deckCreationBackdropButton"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.textview.MaterialTextView>

        <ImageButton
            android:id="@+id/deckCreationBackdropButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/settings_content_desc"
            android:padding="8dp"
            android:scaleType="center"
            android:tint="@color/color_on_backdrop"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backButton"
            app:srcCompat="@drawable/ic_baseline_build_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_backdrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/deckCreationScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:background="@color/color_backdrop"
            android:scrollbarThumbVertical="@color/color_secondary"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_backdrop"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/numberOfCardsLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:padding="8dp"
                        android:text="@string/deck_creation_number_of_cards_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Overline"
                        android:textColor="@color/color_on_backdrop"
                        android:textSize="12sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfCardsOutput"
                        app:layout_constraintEnd_toStartOf="@+id/numberOfCardsOutput"
                        app:layout_constraintStart_toStartOf="parent" />


                    <TextView
                        android:id="@+id/numberOfCardsOutput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                        android:textColor="@color/color_on_backdrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="50" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/deckCreationLanguageGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/deckCreationLanguageLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:padding="8dp"
                        android:text="@string/deck_creation_language_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Overline"
                        android:textColor="@color/color_on_backdrop"
                        android:textSize="12sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/deckCreationLanguageOutput"
                        app:layout_constraintEnd_toStartOf="@+id/deckCreationLanguageOutput"
                        app:layout_constraintStart_toStartOf="parent" />


                    <TextView
                        android:id="@+id/deckCreationLanguageOutput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="end"
                        android:padding="16dp"
                        android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
                        android:textColor="@color/color_on_backdrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="English" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/deckCreationNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:labelFor="@id/deckCreationNameInput"
                        android:padding="8dp"
                        android:paddingEnd="24dp"
                        android:text="@string/deck_creation_name_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Overline"
                        android:textColor="@color/color_on_backdrop"
                        android:textSize="12sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/deckCreationNameInput"
                        app:layout_constraintStart_toStartOf="parent" />


                    <EditText
                        android:id="@+id/deckCreationNameInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:padding="16dp"
                        android:selectAllOnFocus="true"
                        android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
                        android:textColor="@color/color_on_backdrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/deckCreationNameLabel"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/deckCreationCardsPerDayLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:labelFor="@id/deckCreationCardsPerDayInput"
                        android:padding="8dp"
                        android:paddingEnd="24dp"
                        android:text="@string/deck_creation_new_cards_per_day_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Overline"
                        android:textColor="@color/color_on_backdrop"
                        android:textSize="12sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/deckCreationCardsPerDayInput"
                        app:layout_constraintStart_toStartOf="parent" />


                    <EditText
                        android:id="@+id/deckCreationCardsPerDayInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:padding="16dp"
                        android:selectAllOnFocus="true"
                        android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                        android:textColor="@color/color_on_backdrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="20" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:padding="16dp"
            app:layout_anchor="@id/deckCreationContentLayout"
            app:layout_anchorGravity="top|center">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/deckCreationCreateDeckButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/deck_creation_create_deck_button"
                app:icon="@drawable/ic_baseline_check_24"
                app:layout_anchorGravity="top" />
        </FrameLayout>

        <include layout="@layout/deck_creation_bottom_sheet" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/finishDeckFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="invisible"
            app:layout_anchor="@id/suggestionList"
            app:layout_anchorGravity="bottom|right|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>