...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


                <EditText
                    android:id="@+id/keywordsInputLeft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    app:layout_constraintEnd_toStartOf="@+id/addTextButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/addTextButton" />

                <EditText
                    android:id="@+id/keywordsInputRight"
                    android:layout_width="0dp"
...
