<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Transition
        app:constraintSetEnd="@id/collapsed"
        app:constraintSetStart="@id/expanded"
        app:motionInterpolator="easeInOut">

        <OnSwipe
            app:dragDirection="dragUp"
            app:touchAnchorId="@id/languagesList"
            app:touchAnchorSide="top" />


    </Transition>

    <ConstraintSet android:id="@+id/expanded" />

    <ConstraintSet android:id="@+id/collapsed">

        <Constraint
            android:id="@id/createBucketFab"
            android:alpha="0"
            android:scaleX=".8"
            android:scaleY=".8"
            android:translationY="50dp" />

        <Constraint
            android:id="@id/todayView"
            android:alpha="0"
            android:scaleX=".7"
            android:scaleY=".7"
            android:translationY="-100dp" />

        <Constraint
            android:id="@id/todayLabel"
            android:alpha="0"
            android:scaleX=".7
"
            android:scaleY=".7"
            android:translationY="-100dp" />

        <Constraint
            android:id="@id/avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:alpha="0"
            android:scaleX=".7"
            android:scaleY=".7"
            android:translationY="-100dp" />

        <Constraint
            android:id="@id/progressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </ConstraintSet>

</MotionScene>